--- a/.github/workflows/container-arm.yml
+++ b/.github/workflows/container-arm.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest-arm64
+    runs-on: ubuntu-24.04-arm
     permissions:
       contents: read
       packages: write
